<resources>
    <string name="app_name">InventoryManagementSystem</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_in">Log In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LogIn</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="signup">SignUp</string>
    <string name="delete">Delete</string>
    <string name="product_name">Product Name</string>
    <string name="price">Price</string>
    <string name="qty">Quantity</string>
</resources>