<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.SignupFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textColor="@color/black"
        android:textSize="@dimen/_20ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2"/>
    <EditText
        android:id="@+id/edtxtsignname"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:background="@drawable/custom_edit_text"
        android:ems="10"
        android:hint="@string/name"
        android:paddingStart="@dimen/_10ssp"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />
    <EditText
        android:id="@+id/edtxtsigemail"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:background="@drawable/custom_edit_text"
        android:ems="10"
        android:hint="@string/email"
        android:paddingStart="@dimen/_10ssp"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtxtsignname" />
    <EditText
        android:id="@+id/edtxtsigpass"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:background="@drawable/custom_edit_text"
        android:ems="10"
        android:hint="@string/password"
        android:paddingStart="@dimen/_10ssp"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtxtsigemail" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/btnsignup"
        android:layout_width="@dimen/_230sdp"
        android:layout_height="@dimen/_40sdp"
        android:background="@drawable/orange_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radiogroup"
        app:layout_constraintVertical_bias="0.2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="100dp"
            android:text="@string/signup"
            android:textColor="@color/white"
            android:textSize="@dimen/_15ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <RadioGroup
        android:id="@+id/radiogroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_40sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtxtsigpass"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rdbtnshopk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Shopkeeper"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold"/>

        <RadioButton
            android:id="@+id/rdbtncust"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Customer"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold"/>

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>