<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.LoginFragment">

    <!-- TODO: Update blank fragment layout -->


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:textColor="@color/black"
        android:textSize="@dimen/_20ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2"/>

    <EditText
        android:id="@+id/edtxtlogemail"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:background="@drawable/custom_edit_text"
        android:ems="10"
        android:hint="@string/email"
        android:paddingStart="@dimen/_10ssp"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/edtxtlogpass"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:background="@drawable/custom_edit_text"
        android:ems="10"
        android:hint="@string/password"
        android:paddingStart="@dimen/_10ssp"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtxtlogemail" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/getlogin"
        android:layout_width="@dimen/_230sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/orange_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radiologgroup">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="100dp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="@dimen/_15ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_50sdp"
        android:text="Don't have account"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/getlogin" />

    <TextView
        android:id="@+id/txtsignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="@dimen/_45sdp"
        android:layout_marginEnd="74dp"
        android:text="SignUp"
        android:textColor="@color/blue"
        android:textStyle="bold"
        android:textSize="@dimen/_20ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/getlogin" />

    <RadioGroup
        android:id="@+id/radiologgroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_40sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtxtlogpass"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rbtnlogshopkep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Shopkeeper"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold"/>

        <RadioButton
            android:id="@+id/rbtnlogcust"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Customer"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold"/>

    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>